...
        android:id="@+id/myRestaurantsTextView" />

    <Button
        android:text="Find Donuts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emberButton"
        android:textSize="18sp"
        android:textColor="@color/colorTextIcons"
        android:background="@color/colorAccent"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/savedRestaurantsButton"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/enterZip"
        android:background="@color/colorTextIcons"
        android:hint="Enter Zip Code"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="35dp"
        android:layout_above="@+id/emberButton"
...
