<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.guest.myrestaurants.activityRestaurants">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Restaurants near "
        android:id="@+id/locationTextView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
